--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -296,6 +296,11 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  @include for-phone {
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .loader {
