add task solution

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,17 @@
-@import '../mixins/mixin.scss';
+@import '../assets/mixins/mixin.scss';
 
 @font-face {
   font-family: 'PragmaticaC-Bold';
-  src: url('../fonts/pragmaticac-bold.otf') format('woff2'),
-    url('../fonts//pragmaticac.otf') format('woff');
+  src: url('../assets/fonts/pragmaticac-bold.otf') format('woff2'),
+    url('../assets/fonts//pragmaticac.otf') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PragmaticaC';
-  src: url('../fonts/pragmaticac.otf') format('woff2'),
-    url('../fonts/pragmaticac.otf') format('woff');
+  src: url('../assets/fonts/pragmaticac.otf') format('woff2'),
+    url('../assets/fonts/pragmaticac.otf') format('woff');
   font-weight: bold;
   font-style: normal;
 }
@@ -44,285 +44,6 @@
   }
 }
 
-.line {
-  border: 1px solid #E2E6E9;
-  width: 100%;
-}
-
-.header {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  width: 450px;
-  @include for-phone {
-    width: 100%;
-  }
-
-  &-names {
-    display: flex;
-    flex-direction: row;
-    font-family: 'PragmaticaC', sans-serif;
-    color: grey;
-
-    &-value {
-      margin-right: auto;
-    }
-
-    &-buys {
-      margin-left: 100px;
-      margin-right: 50px;
-      @include for-phone {
-        margin-left: 30px;
-        margin-right: 30px;
-      }
-    }
-
-    &-sells {
-      margin-left: auto;
-    }
-  }
-
-  &-usdmoney {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    &-uah {
-      margin-left: 10px;
-      color: gray;
-      font-family: 'PragmaticaC', sans-serif;
-      margin-right: auto;
-    }
 
 
-    &-buys {
-      margin-left: 100px;
-      margin-right: 50px;
-      @include for-phone {
-        margin-left: 30px;
-        margin-right: 30px;
-      }
-    }
 
-    &-sells {
-      margin-left: auto;
-    }
-  }
-
-  &-eurmoney {
-    display: flex;
-    flex-direction: row;
-
-    &-uah {
-      margin-left: 10px;
-      color: gray;
-      font-family: 'PragmaticaC', sans-serif;
-      margin-right: auto;
-    }
-
-
-    &-buys {
-      margin-left: 100px;
-      margin-right: 50px;
-      @include for-phone {
-        margin-left: 30px;
-        margin-right: 30px;
-      }
-    }
-
-    &-sells {
-      margin-left: auto;
-    }
-  }
-}
-
-.converter {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-
-  &-name {
-    font-family: 'PragmaticaC', sans-serif;
-    color: gray;
-    margin-top: 40px;
-  }
-
-  &-division {
-    display: flex;
-    background-color: white;
-    margin-top: 10px;
-    width: 20px;
-    height: 20px;
-    margin-left: 25px;
-    margin-right: 25px;
-    background-repeat: no-repeat;
-    background-image: url('../imgs/doublearrowgray.svg');
-    transform: rotate(90deg);
-    background-size: 20px;
-    background-position: center;
-    border: none;
-    cursor: pointer;
-  }
-
-  &-first {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    &-selection {
-      height: 40px;
-      width: 100%;
-      margin-bottom: 20px;
-      border: #B4BDC3 1px solid;
-      padding-left: 24px;
-      font-family: 'PragmaticaC', sans-serif;
-      font-size: 16px;
-      cursor: pointer;
-
-      @include for-phone {
-        width: 100%;
-        padding: 0;
-      }
-    }
-
-    &-input {
-      box-sizing: border-box;
-      height: 40px;
-      width: 100%;
-      -moz-appearance: textfield;
-      appearance: textfield;
-      border: #B4BDC3 1px solid;
-      padding-left: 24px;
-      font-family: 'PragmaticaC', sans-serif;
-      font-size: 16px;
-      margin-top: auto;
-
-      @include for-phone {
-        margin-top: auto;
-        width: 100%;
-      }
-    }
-
-    &-input::-webkit-inner-spin-button,
-    &-input::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-  }
-
-  &-second {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    &-combination {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      @include for-phone {
-        flex-direction: column;
-      }
-
-      &-value {
-        display: flex;
-        height: 40px;
-        align-items: center;
-        justify-content: center;
-        width: 40px;
-        margin-left: 20px;
-        padding: auto;
-        cursor: default;
-        margin-bottom: 20px;
-        border: 1px solid #B4BDC3;
-        @include for-phone {
-          margin-left: auto;
-          margin-bottom: 10px;
-          height: 30px;
-        }
-      }
-    }
-
-    &-selection {
-      height: 40px;
-      width: 100%;
-      margin-bottom: 20px;
-      border: #B4BDC3 1px solid;
-      padding-left: 24px;
-      font-family: 'PragmaticaC', sans-serif;
-      font-size: 16px;
-      cursor: pointer;
-
-      @include for-phone {
-        width: 100%;
-        padding: 0;
-        margin-bottom: 10px;
-      }
-    }
-
-    &-input {
-      box-sizing: border-box;
-      height: 40px;
-      width: 100%;
-      -moz-appearance: textfield;
-      appearance: textfield;
-      border: #B4BDC3 1px solid;
-      padding-left: 24px;
-      font-family: 'PragmaticaC', sans-serif;
-      font-size: 16px;
-
-      @include for-phone {
-        width: 100%;
-      }
-    }
-
-    &-input::-webkit-inner-spin-button,
-    &-input::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-  }
-}
-
-.loader-container {
-  display: flex;
-  margin-left: 100px;
-  justify-content: center;
-  align-items: center;
-  width: 800px;
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  @include for-phone {
-    margin-left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #3498db;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  animation: spin 1s linear infinite;
-
-  &-message {
-    font-family: 'PragmaticaC', sans-serif;
-    font-size: 20px;
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
